# nescpu

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
mayones/: __init__.py  bus.py  cartridge.py  cpu.py  memory.py
nescpu/: bus.py  cartridge.py  cpu.py  mapper.py
tests/: test_cpu.py
