[project]
name = "mayones"
description = "NES console emulator"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "artcom", email = "kust.artcom@gmail.com" }
]
maintainers = []
keywords = []
classifiers = []
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = []
test = []

[project.urls]
"Homepage" = ""
"Bug Reports" = ""
"Funding" = ""
"Say Thanks!" = ""
"Source" = ""

[project.scripts]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.37.1"]
