[tool.poetry]
name = "nescpu"
version = "0.1.0"
description = "NES CPU emulator"
authors = ["artcom <kust.artcom@gmail.com>"]
license = "{file = \"LICENSE\"}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
flake8 = "7.0.0"
flake8-pyproject = "1.2.3"
isort = "5.13.2"
pytest = "8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
